fix: t2c settings dialog spacing for apps that use CSS resets (#7337)

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -734,4 +734,8 @@
     letter-spacing: 0.6px;
     font-family: "Assistant";
   }
+
+  .excalidraw__paragraph {
+    margin: 1rem 0;
+  }
 }
